Simplified sintax for declaring Lists.

--- a/SportCompetitionSystem/SportCompetitionSystem.csproj
+++ b/SportCompetitionSystem/SportCompetitionSystem.csproj
@@ -13,4 +13,12 @@
     <None Remove="Presentation\Model\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="2023.2.0" />
+    <PackageReference Include="JetBrains.ReSharper.CommandLineTools" Version="2023.2.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
